--- a/Ex05.Logic/Ex05.Logic.csproj
+++ b/Ex05.Logic/Ex05.Logic.csproj
@@ -42,6 +42,10 @@
     <Compile Include="Board.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="GameLogic.cs" />
+    <Compile Include="Player.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
