--- a/Ex05.Logic/Ex05.Logic.csproj
+++ b/Ex05.Logic/Ex05.Logic.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="Cell.cs" />
+    <Compile Include="ComputerPlayer.cs" />
     <Compile Include="GameLogic.cs" />
     <Compile Include="Player.cs" />
   </ItemGroup>
